# DocStream-Universal-Document-Parser

./: Dockerfile  README.md  main.py  pyproject.toml
backend/: main.py  requirements.txt
backend/converters/: docx_converter.py  image_converter.py  pdf_converter.py  pptx_converter.py  router.py  sheet_converter.py  text_converter.py
frontend/: index.html
