[project]
name = "docstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pymupdf==1.24.10",
    "pytesseract==0.3.13",
    "python-docx==1.1.2",
    "python-multipart==0.0.9",
    "python-pptx==1.0.2",
    "tabulate==0.9.0",
    "uvicorn[standard]==0.30.6",
]
